--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,16 @@ spring.application.name=authService
 
 server.port=8080
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=alexander
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/db_authService
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://dpg-d18jn3mmcj7s73a2aes0-a.oregon-postgres.render.com:5432/analitica
+spring.datasource.username=analitica_user
+spring.datasource.password=XDIMOj5rtQhWSkL6SNG82Wo7wredPBWJ
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 security.jwt.private.key=${PRIVATE-KEY}
 security.jwt.user.generator=${USER-GENERATOR}
